Fix search icon being outisde of search input on smaller desktop screens.

--- a/assets/scss/0-tools/_gsc-overrides.scss
+++ b/assets/scss/0-tools/_gsc-overrides.scss
@@ -48,7 +48,7 @@ td.gsc-search-button {
   display: inline;
   pointer-events: none;
   position: absolute;
-  right: 30px;
+  right: 50px;
 }
 
 @media screen and (min-width: 1400px) {
